  it might fail.

  Closes #4045

* Fixed extremely long processing of long lines with comma's.

  Closes #5483

* Fixed a false positive for ``assigning-non-slot`` when the slotted class
  defined ``__setattr__``.

  Closes #3793

* Fixed false positive for ``used-before-assignment`` with self-referential type
  annotation in conditional statements within class methods.

  Closes #5499

* By default, pylint does no longer take files starting with ``.#`` into account. Those are
  considered `emacs file locks`. See
  https://www.gnu.org/software/emacs/manual/html_node/elisp/File-Locks.html.
  This behavior can be reverted by redefining the ``ignore-patterns`` option.

  Closes #367

* ``used-before-assignment`` now assumes that assignments in except blocks
  may not have occurred and warns accordingly.

  Closes #4761

* When evaluating statements after an except block, ``used-before-assignment``
  assumes that assignments in the except blocks took place if the
  corresponding try block contained a return statement.

  Closes #5500

* ``used-before-assignment`` now checks names in try blocks.

* Fixed false positive with ``used-before-assignment`` for assignment expressions
  in lambda statements.

  Closes #5360, #3877

* Fixed crash with slots assignments and annotated assignments.

  Closes #5479

* Fixed crash on list comprehensions that used ``type`` as inner variable name.

  Closes #5461

* Some files in ``pylint.testutils`` were deprecated. In the future imports should be done from the
  ``pylint.testutils.functional`` namespace directly.

* Fixed false positives for ``no-value-for-parameter`` with variadic
  positional arguments.

  Closes #5416

* ``safe_infer`` no longer makes an inference when given two function
  definitions with differing numbers of arguments.

  Closes #3675

* Fix ``comparison-with-callable`` false positive for callables that raise, such
  as typing constants.

  Closes #5557
