@@ -62,6 +62,10 @@ Release date: TBA
 
   Closes #5499
 
+* Fixed false positive for ``global-variable-not-assigned`` when the ``del`` statement is used
+
+  Closes #5333
+
 * By default, pylint does no longer take files starting with ``.#`` into account. Those are
   considered `emacs file locks`. See
   https://www.gnu.org/software/emacs/manual/html_node/elisp/File-Locks.html.
